# WordCount

./: .gitignore  README.md  wc.cabal
app/: Main.hs
assets/: stop-words.txt
nix/: sources.json
src/: Lib.hs
