cabal-version:      2.4
name:               WordCounter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ian Burzynski
maintainer:         23251244+iburzynski@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lib

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , directory
      , fmt
      , text
    hs-source-dirs:   app, src
    default-language: Haskell2010
